--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.78.1",
     "posthog-js": "^1.211.2",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
