--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.16",
+    "@mlc-ai/web-llm": "^0.2.80",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
